Aggiunto notebook per il plot di funzioni

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 notebooks/.ipynb_checkpoints/Lab 1-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/Lab 3-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/Lab 2-checkpoint.ipynb
+*.aux
+*.log
+*.out
+*.bak
